fixed css grid styling and alignment

--- a/client/styles/style_id.scss
+++ b/client/styles/style_id.scss
@@ -2,6 +2,4 @@
 // The "settings.json" file in ".vscode" folder will place the compiled
 // file in "styles/compiled" folder for use in HTML.
 
-#map {
-  margin-top: 0;
-}
+
